--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,16 +28,23 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.2.0-rc04"
+    def nav_version = "2.2.0"
     def exoplayer_version = '2.10.5'
+    def lifecycle_version = "2.2.0"
+    def kotlin_core = "1.1.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:$kotlin_core"
+    implementation "androidx.core:core-ktx:$kotlin_core"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
     implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
     implementation "com.google.android.exoplayer:exoplayer-ui:$exoplayer_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
