replace scroll view with RV, add RendererRecyclerView for fast RV adapters, move podcast sample list creation to the repository, new gradle version for android studio 3.6

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,8 @@ dependencies {
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
+    //ui
+    implementation 'com.github.vivchar:RendererRecyclerViewAdapter:2.8.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
