--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,10 +25,13 @@ android {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
     }
+    androidExtensions {
+        experimental = true
+    }
 }
 
 dependencies {
-    def nav_version = "2.2.0"
+    def nav_version = "2.2.1"
     def exoplayer_version = '2.10.5'
     def lifecycle_version = "2.2.0"
     def kotlin_core = "1.1.0"
@@ -59,7 +62,8 @@ dependencies {
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
     //ui
-    implementation 'com.github.vivchar:RendererRecyclerViewAdapter:2.8.0'
+    implementation "com.xwray:groupie:2.7.0"
+    implementation "com.xwray:groupie-kotlin-android-extensions:2.7.0"
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
