--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,12 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.2.1"
+    def nav_version = "2.2.2"
     def exoplayer_version = '2.11.3'
     def lifecycle_version = "2.2.0"
     def kotlin_core = "1.1.0"
     def koin_version = "2.0.1"
+    def retrofit_version = "2.8.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -52,9 +53,10 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.3'
 
     //network
-    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.7.2'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-simplexml:$retrofit_version"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.2.1"
 
     // exoplayer
     implementation "com.google.android.exoplayer:exoplayer-core:$exoplayer_version"
