--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,9 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        viewBinding {
+            enabled = true
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
